Added places api/changing places

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Food Pickr</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXVTbZaaEgvZBiK58R0Na12Rq5NvgX16A&libraries=places"></script>
 
 </head>
 <body>
@@ -23,7 +24,7 @@
                     </div>
                     <div id="randomLocBody">
                         <form action="" action="" id="homeForm">
-                            <input type="text" name="" id="" placeholder="Enter Zip/Street">
+                            <input type="text" name="" id="searchLocation" placeholder="Enter Zip/Street">
                             <br>
                             <input type="text" name="" id="" placeholder="How Far Away? (Miles)">
                             <br>
@@ -58,6 +59,6 @@
         <!-- <div id="center">
             <p>This is in the middle></p>
         </div> -->
-        <script src="linkJS.js"></script>
+        <script src="js/main.js"></script>
 </body>
 </html>
