front page styling

--- a/index.html
+++ b/index.html
@@ -33,9 +33,28 @@
                     </div>
                 </div>
             </div>
-            <div id="tacoBubbleOuter">
-                <embed src="/vectorImages/taco.svg" id="tacoBubbleInner"type="">
+            <!-- <div id="pizzaBubbleOuter">
+                <embed src="/vectorImages/pizza.svg" id="pizzaBubbleInner"type="">
+            </div> -->
+            <div id="coffeeBubbleOuter" class="outer">
+                <embed src="/vectorImages/coffee-cup.svg" id="coffeeBubbleInner"class="inner"type="">
             </div>
+            <div id="friesBubbleOuter"class="outer">
+                <embed src="/vectorImages/french-fries.svg" id="friesBubbleInner"class="inner"type="">
+            </div>
+            <div id="saladBubbleOuter"class="outer">
+                <embed src="/vectorImages/salad.svg" id="saladBubbleInner"class="inner"type="">
+            </div>
+            <div id="burgerBubbleOuter"class="outer">
+                <embed src="/vectorImages/burger.svg" id="burgerBubbleInner"class="inner"type="">
+            </div>
+            <div id="pizzaBubbleOuter"class="outer">
+                <embed src="/vectorImages/pizza.svg" id="pizzaBubbleInner"class="inner"type="">
+            </div>
+            <div id="tacoBubbleOuter"class="outer">
+                <embed src="/vectorImages/taco.svg" id="tacoBubbleInner"class="inner"type="">
+            </div>
+            
         </div>
         <div id="rightSide">
             <div id="headingSecRight">
@@ -54,6 +73,21 @@
                 <div id="randomLocBody">
                     <input type="button" value="Find Me a Favorite" id="goToFavorites">
                 </div>
+            </div>
+            <div id="iceCreamBubbleOuter"class="outer">
+                <embed src="/vectorImages/ice-cream.svg" id="iceCreamBubbleInner"class="inner"type="">
+            </div>
+            <div id="riceBubbleOuter"class="outer">
+                <embed src="/vectorImages/rice.svg" id="riceBubbleInner"class="inner"type="">
+            </div>
+            <div id="kebabBubbleOuter"class="outer">
+                <embed src="/vectorImages/kebab.svg" id="kebabBubbleInner"class="inner"type="">
+            </div>
+            <div id="sushiBubbleOuter"class="outer">
+                <embed src="/vectorImages/sushi.svg" id="sushiBubbleInner"class="inner"type="">
+            </div>
+            <div id="pastaBubbleOuter"class="outer">
+                <embed src="/vectorImages/spaguetti.svg" id="pastaBubbleInner"class="inner"type="">
             </div>
         </div>
         <!-- <div id="center">
